2020-06-03 (2.43.0)

    * Add new request type for MojeID (MojeidNiaUpdateAccount)

2020-06-01 (2.42.0)

    * Add new request types for Ferda service (contact representatives)

2020-04-30 (2.41.0)

    * Add textual object identifier request_object_ref.object_ident to logger

    * Add Ferda service, request types and result codes to logger

2020-03-17 (2.40.1)

    * Remove unused GiST indexes

2020-02-19 (2.40.0)

    * Add GIN trigram indexes for similar string search in domain, nsset and keyset history

2020-01-09 (2.39.0)

    * Add GIN trigram indexes for similar string search in contact history

2019-11-20 (2.38.2)

    * Add new message type (mojeid_sms_two_factor_reset)
        - Fix changes in older upgrade script after tagging

2019-11-12 (2.38.1)

    * new logger request type (BulkTransfer)

2019-09-11 (2.38.0)

    * New charged operation type (MonthlyFee)

    * New logger request types (MojeidDeactivateNiaAuthenticators, NiaPairingRequest)

2019-07-26 (2.37.2)

    * Add new message type (mojeid_sms_password_reset)

2019-06-10 (2.37.1)

    * Set search_path for unaccent_streets function (fix autoanalyze run for tables with new function indexes)

    * New logger request type (MojeidDeactivateFido2)

2019-04-01 (2.37.0)

    * Add unique constraint for registrar var. symbol

    * Fix spec file

2019-03-08 (2.36.0)

    * Add UUID identifier for every basic registry object (domain, contact, nsset, keyset)
      and every history record

    * Add indexes for similar string search (trigrams)

2019-01-17 (2.35.1)

    * Fix for clean db setup (removed unique constraint)

    * Fix e-mail archive migration (2.33.0) and remove cz.nic specific
      templates migration

2018-08-16 (2.35.0)

    * Bank payments moved to separate project (django-pain, fred-pain)
        - preparations for moving invoices as well
        - FRED will manage only registrar credit transactions through accouting interface (fred-accifd)

    * Public request